<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.RegisterActivity">

    <ImageView
        android:id="@+id/welcome_reg_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/welcome_logo_for_login_page"
        app:layout_constraintBottom_toTopOf="@+id/reg_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/register_logo" />

    <EditText
        android:id="@+id/reg_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/custom_rectangle_view_for_edittext"
        android:drawableStart="@drawable/ic_email_icon"
        android:drawablePadding="5dp"
        android:ems="10"
        android:elevation="8dp"
        android:stateListAnimator="@null"
        android:hint="@string/enter_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textAppearance="?android:textAppearanceMedium"
        app:layout_constraintBottom_toTopOf="@+id/reg_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_reg_icon"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/reg_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/custom_rectangle_view_for_edittext"
        android:drawableStart="@drawable/ic_password_icon"
        android:drawablePadding="5dp"
        android:ems="10"
        android:elevation="8dp"
        android:stateListAnimator="@null"
        android:hint="@string/enter_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="8dp"
        android:paddingTop="10dp"
        android:paddingEnd="8dp"
        android:paddingBottom="10dp"
        android:textAppearance="?android:textAppearanceMedium"
        app:layout_constraintBottom_toTopOf="@+id/confirm_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_email"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/custom_rectangle_view_for_edittext"
        android:drawableStart="@drawable/ic_password_icon"
        android:drawablePadding="5dp"
        android:ems="10"
        android:elevation="8dp"
        android:stateListAnimator="@null"
        android:hint="@string/confirm_password"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="8dp"
        android:paddingTop="10dp"
        android:paddingEnd="8dp"
        android:paddingBottom="10dp"
        android:textAppearance="?android:textAppearanceMedium"
        app:layout_constraintBottom_toTopOf="@+id/reg_show_password_checkbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_password"
        tools:targetApi="o" />

    <Button
        android:id="@+id/reg_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/custom_rectangle_view_for_button"
        android:paddingStart="8dp"
        android:paddingTop="14dp"
        android:paddingEnd="8dp"
        android:paddingBottom="14dp"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:elevation="10dp"
        android:stateListAnimator="@null"
        android:translationZ="10dp"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/already_account_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_show_password_checkbox"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/already_account_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:text="@string/already_have_an_account"
        android:textAllCaps="false"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/colorMyWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_button"
        app:layout_constraintVertical_bias="0.85" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/reg_show_password_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:buttonTint="@android:color/white"
        android:text="@string/show_password"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/reg_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password"
        tools:targetApi="lollipop" />

</android.support.constraint.ConstraintLayout>