<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".activities.NewPostActivity"
    tools:layout_editor_absoluteY="25dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/new_post_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/blog_post_image_view"
        android:layout_width="0dp"
        android:layout_height="240dp"
        android:background="@android:color/darker_gray"
        android:contentDescription="@string/blog_post_image_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_post_toolbar"
        app:srcCompat="@drawable/default_blog_post_icon" />

    <EditText
        android:id="@+id/blog_new_post_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_rectangle_view_for_edittext"
        android:backgroundTintMode="multiply"
        android:elevation="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/post_description"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:stateListAnimator="@null"
        app:layout_constraintBottom_toTopOf="@+id/publish_post_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blog_post_image_view"
        app:layout_constraintVertical_bias="0.0"
        tools:targetApi="o" />

    <Button
        android:id="@+id/publish_post_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_rectangle_view_for_button"
        android:elevation="10dp"
        android:padding="0dp"
        android:stateListAnimator="@null"
        android:text="@string/publish_post"
        android:textAllCaps="false"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/white"
        android:translationZ="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="lollipop" />

</android.support.constraint.ConstraintLayout>