<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AccountSetupActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/account_setup_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_setup_toolbar"
        app:layout_constraintVertical_weight="3">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/default_profile_image"
            android:src="@drawable/default_image_profile"
            app:civ_border_color="@color/colorMyWhite"
            app:civ_border_width="1dp"
            android:elevation="8dp"
            android:stateListAnimator="@null"
            android:translationZ="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="lollipop" />

        <EditText
            android:id="@+id/account_user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:hint="@string/enter_your_name"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textStyle="bold"
            android:elevation="8dp"
            android:stateListAnimator="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image_view"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/account_user_designation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:hint="@string/enter_your_designation"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:elevation="8dp"
            android:stateListAnimator="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_user_name"
            tools:targetApi="o" />

        <Button
            android:id="@+id/save_account_setting_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="38dp"
            android:background="@drawable/custom_rectangle_view_for_button"
            android:elevation="10dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:stateListAnimator="@null"
            android:text="@string/save_account_settings"
            android:textAllCaps="false"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/white"
            android:translationZ="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_user_designation"
            tools:targetApi="lollipop" />

    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/account_setup_card_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="15dp"
        android:translationZ="10dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/post_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/posts"
                android:textAppearance="?android:textAppearanceMedium"
                app:layout_constraintEnd_toStartOf="@+id/follower_text_view"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/follower_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/followers"
                android:textAppearance="?android:textAppearanceMedium"
                app:layout_constraintEnd_toStartOf="@+id/following_text_view"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/post_text_view"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/following_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/following"
                android:textAppearance="?android:textAppearanceMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/follower_text_view"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/account_user_total_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="200"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/post_text_view"
                app:layout_constraintStart_toStartOf="@+id/post_text_view"
                app:layout_constraintTop_toBottomOf="@+id/post_text_view"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/account_user_follower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="200"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/follower_text_view"
                app:layout_constraintStart_toStartOf="@+id/follower_text_view"
                app:layout_constraintTop_toBottomOf="@+id/follower_text_view"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/account_user_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="200"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/following_text_view"
                app:layout_constraintStart_toStartOf="@+id/following_text_view"
                app:layout_constraintTop_toBottomOf="@+id/following_text_view"
                app:layout_constraintVertical_bias="0.0" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_weight="1">

        <Button
            android:id="@+id/account_user_follow_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@android:color/white"
            android:text="@string/follow"
            android:textAllCaps="false"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorMyAccent"
            android:elevation="10dp"
            android:stateListAnimator="@null"
            android:translationZ="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="lollipop" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>